prd_package/objects/ROP_Number_Inventory__c.object
<CustomObject>
    <fields>
        <fullName>ROP_Number__c</fullName>
        <description>This field keeps the ROP Numbers. It also acts as the external key to prevent duplicate ROP Numbers in the system.</description>
        <externalId>true</externalId>
        <label>ROP Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Register_DateTime__c</fullName>
        <description>This is the timestamp when this ROP Number has been registered.</description>
        <label>Register Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Registered__c</fullName>
        <formula>NOT(ISNULL( Register_DateTime__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registered</label>
        <type>Checkbox</type>
    </fields>
    <label>ROP Number Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Registered__c</columns>
        <columns>Register_DateTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ROP Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ROP Number Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>